[package]
name = "fcgi_file_api"
version = "0.1.0"
authors = ["Sherman Zhou <shermanzhou@capco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfcgi = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"